Fix label alignment in event edit date box.

--- a/public/admin/css/add_new_event.css
+++ b/public/admin/css/add_new_event.css
@@ -48,7 +48,7 @@
 }
 
 .ai1ec-form td.ai1ec-first, .ai1ec-form-nested td.ai1ec-first {
-    width: 8.5em;
+    width: 7lh;
 }
 
 .ai1ec-first-padding {
